--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section>
           <div class="container full-height">
             <div class="row between-xs full-height">
-              <div class="column column--xs-12 column--l-5">
+              <div class="column column--xs-12 column--l-4">
                 <div class="wrapper--vertical-l">
                   <h1 class="font-bold">Surendra Vikram Singh</h1>
                   <h2 class="h5 p font-medium margin-top-xs lineheight-default">User experience designer & developer</h2>
@@ -32,13 +32,13 @@
                 </div>
 
                 <div class="wrapper--content margin-top-s">
-                  <h3 class="h5 font-bold color-light">About</h1>
+                  <h3 class="h6 p font-bold">About</h1>
                   <p class="margin-top-xs">I have an experience of more than a decade of designing web-based applications, which includes understanding the users/customers' problems and solving them by working closely with the product managers to finalize the solution and Design a wireframe/Visual design. And finally, developing the static web templates(HTML/CSS templates) of the finalized visual design. I am also responsible for developing and maintaining HTML/CSS frameworks across the organization.</p>
                 </div>
 
                 <!-- Skills -->
                 <div class="wrapper--content margin-top-s">
-                  <h3 class="h5 font-bold color-light">Skills</h1>
+                  <h3 class="h6 p font-bold">Skills</h1>
                   <ul class="list list--secondary">
                     <li class="p">UX design & Prototyping</li>
                     <li class="p">Visual designing</li>
@@ -50,67 +50,65 @@
 
                 <!-- Education -->
                 <div class="wrapper--content margin-top-s">
-                  <h3 class="h5 font-bold color-light">Education</h1>
+                  <h3 class="h6 p font-bold">Education</h1>
 
                   <div class="wrapper--vertical-s">
-                    <h4 class="p font-medium">Bachelors in Electrical & Electronics Engineering</h4>
-                    <p class="small color-light font-regular lineheight-default margin-top-xs">2003 - 2007</p>
+                    <h4 class="h6 font-medium lineheight-default">Bachelors in Electrical & Electronics Engineering</h4>
+                    <p class="small color-light font-regular lineheight-m margin-top-xs">2003 - 2007</p>
                   </div>
                 </div>
 
                 <!-- Education -->
                 <div class="wrapper--content margin-top-s">
-                  <h3 class="h5 font-bold color-light">External profiles</h1>
+                  <h3 class="h6 p font-bold">External profiles</h1>
 
-                  <div class="wrapper--vertical-s">
                     <ul class="list list--secondary">
                       <li class="p"><a href="https://www.linkedin.com/in/svsdesigns/" target="__blank">LinkedIn</a></li>
                       <li class="p"><a href="https://stackoverflow.com/users/1160568/svs" target="__blank">Stackoverflow</a></li>
                       <li class="p"><a href="https://www.behance.net/svsdesigns" target="__blank">Behance</a></li>
                       <li class="p"><a href="https://unsplash.com/@svsdesigns" target="__blank">Unsplash</a></li>
                     </ul>
-                  </div>
                 </div>
                 
               </div>
-              <div class="column column--xs-12 column--l-6">
+              <div class="column column--xs-12 column--l-7">
                 <div class="wrapper--content margin-top-l">
-                  <h3 class="h5 font-bold color-light">Work Experience</h1>
+                  <h3 class="h6 p font-bold">Work Experience</h1>
                 </div>
 
                 <!-- Pocketpills -->
-                <div class="wrapper--vertical-s">
-                  <h4 class="p font-medium"><a href="https://pocketpills.com" target="_blank" class="txt-underline">Pocketpills Pharmacy</a><br><i class="small color-light font-regular lineheight-default">July 2018 - Present</i></h4>
+                <div class="wrapper--vertical-m">
+                  <h4 class="h6 font-medium"><a href="https://pocketpills.com" target="_blank">Pocketpills Pharmacy</a><br><i class="small font-medium lineheight-m">July 2018 - Present</i></h4>
                   <p class="margin-top-s">It is an online pharmacy based out in Canada. Being the first employee of the company and the only one to design/develop the user experience, I have played a critical role in the journey of achieving a monthly revenue of $1 million from $1000. To improve the conversion, I have A/B tested multiple design iterations and solutions. My current responsibility is optimizing the funnel by finding the problem with the help of data and providing solutions to be tested. </p>
                 </div>
 
                 <!-- Nearbuy -->
-                <div class="wrapper--vertical-l">
-                  <h4 class="p font-medium"><a href="https://www.nearbuy.com/" target="_blank" class="txt-underline">Nearbuy.com(previously Groupon India)</a>, <br><i class="small color-light font-regular lineheight-default">April 2015 - July 2018</i></h4>
+                <div class="wrapper--vertical-m">
+                  <h4 class="h6 font-medium"><a href="https://www.nearbuy.com/" target="_blank">Nearbuy.com(previously Groupon India)</a>, <br><i class="small font-medium lineheight-m">April 2015 - July 2018</i></h4>
                   <p class="margin-top-s">Lead a team of UX developers to develop a <a href="http://design.nearbuytools.com/phantom/v2/index.html" target="_blank">CSS framework</a> that powers data-heavy merchant dashboard & administrator tools. Single-handedly designed the progressive mobile web app in the browser. Worked closely with Product managers to conceptualize nearbuy.com as a discovery platform where I played the role of a UX designer and helped in refining the user journey during the documentation(PRD) process and converting the idea to high-fidelity wireframes & HTML/CSS static templates/components.</p>
                 </div>
 
                 <!-- Synechron -->
                 <div class="wrapper--vertical-m">
-                  <h4 class="p font-medium"><a href="https://www.synechron.com/" target="_blank" class="txt-underline">Synechron</a><br><i class="small color-light font-regular lineheight-default">April 2013 - September 2014</i></h4>
+                  <h4 class="h6 font-medium"><a href="https://www.synechron.com/" target="_blank">Synechron</a><br><i class="small font-medium lineheight-m">April 2013 - September 2014</i></h4>
                   <p class="margin-top-s">I worked mostly with SAS, a London-based communications firm specializing in corporate, design, and visual communications. Developed static templates and microsites for companies like Alcatel-lucent, SABMiller, Sainsbury, NATS, UAE PMO, MSL Group UK & 24/7 Real Media. Single-handedly created a responsive CSS framework as per the design guidelines for faster development.</p>
                 </div>
 
                 <!-- Fabulloso -->
                 <div class="wrapper--vertical-m">
-                  <h4 class="p font-medium"><a href="https://fabulloso.com/" target="_blank" class="txt-underline">Fabulloso</a><br><i class="small color-light font-regular lineheight-default">December 2011 - April 2013</i></h4>
+                  <h4 class="h6 font-medium"><a href="https://fabulloso.com/" target="_blank">Fabulloso</a><br><i class="small font-medium lineheight-m">December 2011 - April 2013</i></h4>
                   <p class="margin-top-s">It is e-commerce which sells curated products for home decor and men/women's apparel designed by Rajesh Pratap Singh & others. I have single-handedly designed and developed the user experience and implemented the static template to the Magento framework. Lead a team of two graphics designers & a photographer we reduced the time taken in the process of editing the product image by almost 50%. Fabulloso website was showcased by ELLE & The Hindu.</p>
                 </div>
 
                 <!-- Knowlarity -->
                 <div class="wrapper--vertical-m">
-                  <h4 class="p font-medium"><a href="https://www.knowlarity.com/" target="_blank" class="txt-underline">Knowlarity communications</a><br><i class="small color-light font-regular lineheight-default">September 2010 - December 2011</i></h4>
+                  <h4 class="h6 font-medium"><a href="https://www.knowlarity.com/" target="_blank">Knowlarity communications</a><br><i class="small font-medium lineheight-m">September 2010 - December 2011</i></h4>
                   <p class="margin-top-s">I have single-handedly designed/developed the user experience/customer experience of cloud telephony-based products like Superfax(e-mail to fax), Super receptionist(Virtual assistant) & ERCC(Emergency response system). Also, designed/developed the interface for an android tablet-based Q&A app used to take the feedback of pateints gone through a Cataract surgery.</p>
                 </div>
 
                 <!-- Digisoft -->
                 <div class="wrapper--vertical-m">
-                  <h4 class="p font-medium"><a href="https://digisoft.in/" target="_blank" class="txt-underline">Digisoft</a><br><i class="small color-light font-regular lineheight-default">December 2009 - September 2010</i></h4>
+                  <h4 class="h6 font-medium"><a href="https://digisoft.in/" target="_blank">Digisoft</a><br><i class="small font-medium lineheight-m">December 2009 - September 2010</i></h4>
                   <p class="margin-top-s">Worked independently on designing and developing static websites. Worked with clients like Jaypee Cement, Flex Foods & multiple tourisim websites. Also worked on Joomla template customization & basic Search Engine Optimization. The <a href="http://www.mindruktrek.com/" target="_blank">first website</a> I have created for a Ladakh based tourism company is still live.</p>
                 </div>
 
@@ -122,11 +120,11 @@
       </main>
 
       <!-- footer -->
-      <div class="btn--fab bg-dark--50">
+      <div class="btn--fab bg-dark--60">
         <button id="day-light-toggle">
           
         </button>
-      </footer>
+      </div>
     </div>
 
     <!-- Scripts -->
